application.properties comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+#DO NOT PUT IN KEYS HERES, THIS IS AN EXAMPLE TO QUICKLY COPY/PASTE INTO YOUR ENVIRONMENT VARIABLES
+#WEATHER_API_KEY=?????????????;OPEN_ROUTE_API_KEY=????????????;CHATGPT_API_KEY=????????????
